--- a/front/src/App.css
+++ b/front/src/App.css
@@ -54,6 +54,23 @@
   animation: slidebg 2s linear infinite;
 }
 
+.water-button {
+  border-color: transparent;
+  border-radius: 15px;
+  color: #fff;
+  width: 300px;
+  height: 100px;
+  background-image: linear-gradient(90deg, #00c0ff 0%,  #00c0ff 100%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+  font-size: 30px;
+  font-weight: bold;
+  cursor: pointer;
+  animation: slidebg 2s linear infinite;
+}
+
 @keyframes slidebg {
   to {
     background-position: 20vw;
