--- a/front/src/App.css
+++ b/front/src/App.css
@@ -60,7 +60,7 @@
   color: #fff;
   width: 300px;
   height: 100px;
-  background-image: linear-gradient(90deg, #00c0ff 0%,  #00c0ff 100%);
+  background-image: linear-gradient((blue, pink));
   display: flex;
   align-items: center;
   justify-content: center;
