--- a/front/src/App.css
+++ b/front/src/App.css
@@ -57,10 +57,10 @@
 .water-button {
   border-color: transparent;
   border-radius: 15px;
-  color: #fff;
+  color: teal;
   width: 300px;
   height: 100px;
-  background-image: linear-gradient(90deg, #00c0ff 0%,  #00c0ff 100%);
+  background-image: linear-gradient(to top, bisque, 20%, cyan);
   display: flex;
   align-items: center;
   justify-content: center;
