--- a/front/src/styles/Username.module.css
+++ b/front/src/styles/Username.module.css
@@ -14,7 +14,7 @@
 }
 
 .btn {
-    @apply border bg-indigo-500 w-3/4 py-4 rounded-lg text-gray-50 text-xl shadow-sm text-center
+    @apply border bg-indigo-500 w-3/4 py-4 rounded-lg text-gray-50 text-xl shadow-sm text-center flex flex-row justify-center
 }
 
 .btn:hover {
